@@ -289,24 +289,26 @@ void FlowHandler::SetSecretCount(int secretsNum)
 
 void FlowHandler::AddSecret(int levelSecretIndex)
 {
-	if (levelSecretIndex > 7)
+	static const unsigned int maxSecretIndex = CHAR_BIT * sizeof(unsigned int);
+
+	if (levelSecretIndex >= maxSecretIndex)
 	{
-		TENLog("Current maximum amount of secrets per level is 7.", LogLevel::Warning);
+		TENLog("Current maximum amount of secrets per level is" + std::to_string(maxSecretIndex) + ".", LogLevel::Warning);
 		return;
 	}
 
-	if (!(Statistics.Level.Secrets & (1 << levelSecretIndex)))
-	{
-		if (Statistics.Game.Secrets >= UCHAR_MAX)
-		{
-			TENLog("Maximum amount of game secrets is already reached!", LogLevel::Warning);
-			return;
-		}
+	if ((Statistics.Level.Secrets & (1 << levelSecretIndex)))
+		return;
 
-		PlaySecretTrack();
-		Statistics.Level.Secrets |= (1 << levelSecretIndex);
-		Statistics.Game.Secrets++;
+	if (Statistics.Game.Secrets >= UINT_MAX)
+	{
+		TENLog("Maximum amount of level secrets is already reached!", LogLevel::Warning);
+		return;
 	}
+
+	PlaySecretTrack();
+	Statistics.Level.Secrets |= (1 << levelSecretIndex);
+	Statistics.Game.Secrets++;
 }
 
 bool FlowHandler::IsFlyCheatEnabled() const
