@@ -6,6 +6,7 @@ Version 1.0.3
 * Add OCB 1 for rollingball to make it silent.
 * Add FlyCheat option to gameflow script for disabling dozy mode.
 * Adjust sprint jump timing.
+* Increase amount of maximum secrets per level from 8 to 32.
 * Fix dodgy weapon lock angle constraints.
 * Fix wrong shotgun ammo pickup amount.
 * Fix shotgun using 6 units of ammo with each shot.
